#
# Copyright (c) 2017, 2020 ADLINK Technology Inc.
#
# This program and the accompanying materials are made available under the
# terms of the Eclipse Public License 2.0 which is available at
# http://www.eclipse.org/legal/epl-2.0, or the Apache License, Version 2.0
# which is available at https://www.apache.org/licenses/LICENSE-2.0.
#
# SPDX-License-Identifier: EPL-2.0 OR Apache-2.0
#
# Contributors:
#   ADLINK janu team, <janu@adlink-labs.tech>
#
[package]
name = "janu-ext"
version = "0.5.0-beta.9"
repository = "https://github.com/eclipse-janu/janu"
homepage = "http://janu.io"
authors = ["kydos <angelo@icorsaro.net>",
           "Julien Enoch <julien@enoch.fr>"]
edition = "2018"
license = " EPL-2.0 OR Apache-2.0"
categories = ["network-programming"]
description = "Janu: extensions to the client API."

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
async-std = { version = "=1.9.0", default-features = false, features = ["attributes", "unstable"] }
bincode = "1.3.3"
env_logger = "0.9.0"
flume = "0.10.7"
futures = "0.3.12"
futures-lite = "1.11.3"
log = "0.4"
serde = "1.0.126"
janu = { version = "0.5.0-beta.9", path = "../janu" }
janu-util = { version = "0.5.0-beta.9", path = "../janu-util" }

[dev-dependencies]
clap = "2.33.3"
env_logger = "0.9.0"


[[example]]
name = "zn_query_sub"
path = "examples/janu-net/zn_query_sub.rs"

[[example]]
name = "zn_pub_cache"
path = "examples/janu-net/zn_pub_cache.rs"

[[example]]
name = "zn_member"
path = "examples/janu-net/zn_member.rs"

[[example]]
name = "zn_view_size"
path = "examples/janu-net/zn_view_size.rs"
