#
# Copyright (c) 2017, 2020 ADLINK Technology Inc.
#
# This program and the accompanying materials are made available under the
# terms of the Eclipse Public License 2.0 which is available at
# http://www.eclipse.org/legal/epl-2.0, or the Apache License, Version 2.0
# which is available at https://www.apache.org/licenses/LICENSE-2.0.
#
# SPDX-License-Identifier: EPL-2.0 OR Apache-2.0
#
# Contributors:
#   ADLINK janu team, <janu@adlink-labs.tech>
#
[package]
name = "janu"
version = "0.5.0-beta.9"
repository = "https://github.com/eclipse-janu/janu"
homepage = "http://janu.io"
authors = [
    "kydos <angelo@icorsaro.net>",
    "Julien Enoch <julien@enoch.fr>",
    "Olivier Hécart <olivier.hecart@adlinktech.com>",
    "Luca Cominardi <luca.cominardi@adlinktech.com>",
    "Pierre Avital <pierre.avital@adlinktech.com>",
]
edition = "2018"
license = " EPL-2.0 OR Apache-2.0"
categories = ["network-programming"]
description = "Janu: Zero Overhead Pub/sub, Store/Query and Compute."
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[badges]
maintenance = { status = "actively-developed" }

[features]
stats = []
transport_tcp = []
transport_tls = ["async-rustls"]
transport_udp = []
transport_quic = ["quinn", "rcgen", "webpki", "async-std/tokio1"]
transport_unixsock-stream = ["nix"]
zero-copy = ["bincode", "shared_memory"]
default = [
    "zero-copy",
    "transport_tcp",
    "transport_udp",
    "transport_tls",
    "transport_quic",
    "transport_unixsock-stream",
]

[dependencies]
janu-util = { version = "0.5.0-beta.9", path = "../janu-util" }
janu-plugin-trait = { version = "0.5.0-beta.9", path = "../plugins/janu-plugin-trait", default-features = false }
async-global-executor = "2.0.2"
async-rustls = { version = "=0.2.0", optional = true }
async-std = { version = "=1.9.0", default-features = false, features = [
    "attributes",
    "unstable",
] }
async-trait = "0.1.42"
base64 = "0.13.0"
bincode = { version = "1.3.1", optional = true }
clap = "2.33.3"
env_logger = "0.9.0"
event-listener = "2.5.1"
futures = "0.3.12"
futures-lite = "1.11.3"
flume = "0.10.5"
git-version = "0.3.4"
hex = "0.4.2"
http-types = "2.10.0"
lazy_static = "1.4.0"
libloading = "0.7.0"
log = "0.4"
nix = { version = "0.22.0", optional = true }
petgraph = "0.5.1"
quinn = { version = "0.7.2", optional = true }
rand = "0.8.3"
rcgen = { version = "0.8.9", optional = true }
regex = "1"
serde_json = "1.0"
serde = "1.0.123"
shared_memory = { version = "=0.12.0", optional = true }
socket2 = "0.4.0"
uhlc = "0.4.0"
uuid = { version = "0.8.2", features = ["v4"] }
vec_map = "0.8.2"
webpki = { version = "0.22.0", features = ["std"], optional = true }

[dev-dependencies]
clap = "2.33.3"
criterion = "0.3.4"

[build-dependencies]
rustc_version = "0.4.0"

[[bin]]
name = "janud"
test = false
bench = false

[package.metadata.deb]
name = "janud"
maintainer = "janu-dev@eclipse.org"
copyright = "2017, 2021 ADLINK Technology Inc."
section = "net"
license-file = ["../LICENSE", "0"]
depends = "$auto"
maintainer-scripts = "janu/.deb"
assets = [
    # binary
    ["target/release/janud", "/usr/bin/", "755"],
    # service
    [".service/janu.service","/lib/systemd/system/janu.service","644"],
]


[[example]]
name = "j_put"
path = "examples/janu/j_put.rs"

[[example]]
name = "j_put_float"
path = "examples/janu/j_put_float.rs"

[[example]]
name = "j_delete"
path = "examples/janu/j_delete.rs"

[[example]]
name = "j_get"
path = "examples/janu/j_get.rs"

[[example]]
name = "j_sub"
path = "examples/janu/j_sub.rs"

[[example]]
name = "j_eval"
path = "examples/janu/j_eval.rs"

[[example]]
name = "j_put_thr"
path = "examples/janu/j_put_thr.rs"

[[example]]
name = "j_sub_thr"
path = "examples/janu/j_sub_thr.rs"

[[example]]
name = "j_ping"
path = "examples/janu/j_ping.rs"

[[example]]
name = "j_pong"
path = "examples/janu/j_pong.rs"

[[example]]
name = "zn_scout"
path = "examples/janu-net/zn_scout.rs"

[[example]]
name = "zn_info"
path = "examples/janu-net/zn_info.rs"

[[example]]
name = "zn_write"
path = "examples/janu-net/zn_write.rs"

[[example]]
name = "zn_pub"
path = "examples/janu-net/zn_pub.rs"

[[example]]
name = "zn_pub_shm"
path = "examples/janu-net/zn_pub_shm.rs"

[[example]]
name = "zn_sub"
path = "examples/janu-net/zn_sub.rs"

[[example]]
name = "zn_pull"
path = "examples/janu-net/zn_pull.rs"

[[example]]
name = "zn_eval"
path = "examples/janu-net/zn_eval.rs"

[[example]]
name = "zn_storage"
path = "examples/janu-net/zn_storage.rs"

[[example]]
name = "zn_query"
path = "examples/janu-net/zn_query.rs"

[[example]]
name = "zn_pub_thr"
path = "examples/janu-net/zn_pub_thr.rs"

[[example]]
name = "zn_sub_thr"
path = "examples/janu-net/zn_sub_thr.rs"

[[example]]
name = "zn_pub_shm_thr"
path = "examples/janu-net/zn_pub_shm_thr.rs"

[[example]]
name = "zn_ping"
path = "examples/janu-net/zn_ping.rs"

[[example]]
name = "zn_pong"
path = "examples/janu-net/zn_pong.rs"

[[bench]]
name = "codec_bench"
harness = false

[[bench]]
name = "rwbuf_bench"
harness = false

[[bench]]
name = "rname_bench"
harness = false

[[bench]]
name = "data_creation"
harness = false

[[bench]]
name = "frame_codec"
harness = false

[[bench]]
name = "tables_bench"
harness = false
