#
# Copyright (c) 2017, 2020 ADLINK Technology Inc.
#
# This program and the accompanying materials are made available under the
# terms of the Eclipse Public License 2.0 which is available at
# http://www.eclipse.org/legal/epl-2.0, or the Apache License, Version 2.0
# which is available at https://www.apache.org/licenses/LICENSE-2.0.
#
# SPDX-License-Identifier: EPL-2.0 OR Apache-2.0
#
# Contributors:
#   ADLINK janu team, <janu@adlink-labs.tech>
#
[package]
name = "janu-plugin-storages"
version = "0.5.0-beta.9"
repository = "https://github.com/eclipse-janu/janu"
homepage = "http://janu.io"
authors = [
    "kydos <angelo@icorsaro.net>",
    "Julien Enoch <julien@enoch.fr>",
    "Olivier Hécart <olivier.hecart@adlinktech.com>",
    "Luca Cominardi <luca.cominardi@adlinktech.com>",
]
edition = "2018"
license = " EPL-2.0 OR Apache-2.0"
categories = ["network-programming"]
description = "The janu storages plugin."

[features]
no_mangle = ["janu-plugin-trait/no_mangle"]
default = ["no_mangle"]

[lib]
name = "zplugin_storages"
crate-type = ["cdylib"]


[dependencies]
async-std = "=1.9.0"
async-trait = "0.1"
clap = "2.33.3"
env_logger = "0.9.0"
futures = "0.3.12"
lazy_static = "1.4.0"
libloading = "0.7.0"
log = "0.4.14"
janu = { version = "0.5.0-beta.9", path = "../../janu" }
janu-plugin-trait = { version = "0.5.0-beta.9", path = "../janu-plugin-trait", default-features = false }
janu-util = { version = "0.5.0-beta.9", path = "../../janu-util" }
janu_backend_traits = { version = "0.5.0-beta.9", path = "../../backends/traits" }

[package.metadata.deb]
name = "janu-plugin-storages"
maintainer = "janu-dev@eclipse.org"
copyright = "2017, 2020 ADLINK Technology Inc."
section = "net"
license-file = ["../../LICENSE", "0"]
depends = "janud (=0.5.0-beta.9)"
